--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./style.css">
-    <title>Todo List</title>
+    <title>BoolzApp</title>
 </head>
 
 <body>
@@ -17,6 +17,87 @@
         <div class="grey-part"></div>
 
         <div id="app">
+            <div class="container">
+                <div class="row">
+                    <div class="col-5 border p-0">
+                        <div class="user d-flex justify-content-between align-items-center p-2">
+                            <div class="thumbnail">
+                                <img src="./img/avatar_1.jpg" alt="">
+                                <span class="name fw-bold">Mario</span>
+                            </div>
+                            <div class="icons">
+                                <i class="fa-solid fa-circle-notch fa-xl"></i>
+                                <i class="fa-solid fa-message fa-xl"></i>
+                                <i class="fa-solid fa-ellipsis-vertical fa-xl"></i>
+                            </div>
+                        </div>
+                        <div class="notifications p-3">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div class="">
+                                    <div class="d-flex align-items-center">
+                                        <div class="bell">
+                                            <i class="fa-solid fa-bell-slash fa-xl"></i>
+                                        </div>
+                                        <div class="testo d-flex flex-column ms-2">
+                                            <span class="">Ricevi notifiche di nuovi messaggi</span>
+                                            <a href="" class="text-secondary">attiva le notifiche Desktop</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="search_user d-flex p-2 align-items-center">
+                            <div class="search-icon"><i class="fa-solid fa-magnifying-glass"></i></div>
+                            <input class="border-0 form-control" type="text" placeholder="cerca o inizia una nuova chat">
+                        </div>
+
+                        <div class="message-list border-top">
+                            <div class="users p-2 d-flex justify-content-between align-items-center">
+                                <div class="">
+                                    <div class="thumbnail d-flex align-items-center">
+                                        <img src="./img/avatar_2.jpg" alt="">
+                                        <div class="testo d-flex flex-column ms-2">
+                                            <span class="name fw-bold">Mario</span>
+                                            <span class="text-secondary">ultimo accesso</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="d-flex flex-column ms-2">
+                                    <span class="text-secondary">12:00</span>
+                                    <span class=""></span>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div class="col-7 border">
+                        <div class="receiver p-2 d-flex justify-content-between align-items-center">
+                            <div class="">
+                                <div class="thumbnail d-flex align-items-center">
+                                    <img src="./img/avatar_2.jpg" alt="">
+                                    <div class="testo d-flex flex-column ms-2">
+                                        <span class="name fw-bold">Mario</span>
+                                        <span class="text-secondary">ultimo accesso</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="icons">
+                                <i class="fa-solid fa-magnifying-glass fa-xl"></i>
+                                <i class="fa-solid fa-paperclip fa-xl"></i>
+                                <i class="fa-solid fa-ellipsis-vertical fa-xl"></i>
+                            </div>
+                        </div>
+
+                        <div class="message-container">
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
 
 
 
